--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
 .ff-brand{
   font-family: 'Poppins', sans-serif;
 }
+.card:hover{
+  border: 1px solid deeppink;
+}
 .mern{
   background: #118B4B;
 background: linear-gradient(to right, #118B4B 9%, #E7D41C 35%, #00D1F2 78%, #519A41 100%);
